Fix parser + return data as Writable map